Fix formatting for exceptions wrapped in <pre>

--- a/resources/tempo.css
+++ b/resources/tempo.css
@@ -234,6 +234,11 @@ pre,
 samp {
   font-family: monospace, monospace;
   font-size: 1em;
+  white-space: pre-wrap;       /* CSS 3 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 
 /* Forms
